Tag conn.log appropriately for ICS traffic

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -257,23 +257,6 @@ filter {
                replace => { "[zeek_cols][service]" => "rdp" } }
     }
 
-    if (([zeek_cols][service] == "bacnet") or
-        ([zeek_cols][service] == "bsap") or
-        ([zeek_cols][service] == "cip") or
-        ([zeek_cols][service] == "cotp") or
-        ([zeek_cols][service] == "dnp3") or
-        ([zeek_cols][service] == "ecat") or
-        ([zeek_cols][service] == "enip") or
-        ([zeek_cols][service] == "ethercat") or
-        ([zeek_cols][service] == "iso_cotp") or
-        ([zeek_cols][service] == "modbus") or
-        ([zeek_cols][service] == "profinet") or
-        ([zeek_cols][service] == "profinet_dce_rpc") or
-        ([zeek_cols][service] == "s7comm")) {
-      mutate { id => "mutate_add_tag_ics_conn_log"
-               add_tag => [ "ics" ] }
-    }
-
     mutate { id => "mutate_add_field_zeek_conn_segmentCnt"
              add_field => { "[segmentCnt]" => "1" } }
 
@@ -4009,6 +3992,13 @@ filter {
   if ([zeek][service]) {
     mutate { id => "mutate_split_zeek_service"
              split => { "[zeek][service]" => "," } }
+    ruby {
+      id => "ruby_zeek_service_uniq"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[zeek][service]"
+      }
+    }
     mutate { id => "mutate_merge_zeek_service"
              merge => { "[protocol]" => "[zeek][service]" } }
   }
@@ -4070,6 +4060,24 @@ filter {
                  event.set('[tcpflags][fin]',     10**(fCnt-1)) if fCnt > 0
                  event.set('[tcpflags][rst]',     10**(rCnt-1)) if rCnt > 0"
       }
+    }
+
+    # tag ICS services from conn.log
+    if (("bacnet" in [zeek_cols][service]) or
+        ("bsap" in [zeek_cols][service]) or
+        ("cip" in [zeek_cols][service]) or
+        ("cotp" in [zeek_cols][service]) or
+        ("dnp3" in [zeek_cols][service]) or
+        ("ecat" in [zeek_cols][service]) or
+        ("enip" in [zeek_cols][service]) or
+        ("ethercat" in [zeek_cols][service]) or
+        ("iso_cotp" in [zeek_cols][service]) or
+        ("modbus" in [zeek_cols][service]) or
+        ("profinet" in [zeek_cols][service]) or
+        ("profinet_dce_rpc" in [zeek_cols][service]) or
+        ("s7comm" in [zeek_cols][service])) {
+      mutate { id => "mutate_add_tag_ics_conn_log"
+               add_tag => [ "ics" ] }
     }
 
   } else if ([log_source] == "bacnet_discovery") {
