Tag conn.log appropriately for ICS traffic

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -4063,19 +4063,19 @@ filter {
     }
 
     # tag ICS services from conn.log
-    if (("bacnet" in [zeek_cols][service]) or
-        ("bsap" in [zeek_cols][service]) or
-        ("cip" in [zeek_cols][service]) or
-        ("cotp" in [zeek_cols][service]) or
-        ("dnp3" in [zeek_cols][service]) or
-        ("ecat" in [zeek_cols][service]) or
-        ("enip" in [zeek_cols][service]) or
-        ("ethercat" in [zeek_cols][service]) or
-        ("iso_cotp" in [zeek_cols][service]) or
-        ("modbus" in [zeek_cols][service]) or
-        ("profinet" in [zeek_cols][service]) or
-        ("profinet_dce_rpc" in [zeek_cols][service]) or
-        ("s7comm" in [zeek_cols][service])) {
+    if (("bacnet" in [zeek][service]) or
+        ("bsap" in [zeek][service]) or
+        ("cip" in [zeek][service]) or
+        ("cotp" in [zeek][service]) or
+        ("dnp3" in [zeek][service]) or
+        ("ecat" in [zeek][service]) or
+        ("enip" in [zeek][service]) or
+        ("ethercat" in [zeek][service]) or
+        ("iso_cotp" in [zeek][service]) or
+        ("modbus" in [zeek][service]) or
+        ("profinet" in [zeek][service]) or
+        ("profinet_dce_rpc" in [zeek][service]) or
+        ("s7comm" in [zeek][service])) {
       mutate { id => "mutate_add_tag_ics_conn_log"
                add_tag => [ "ics" ] }
     }
