for idaholab/Malcolm#64 and idaholab/Malcolm#16, some work delineating better between zeek fields and standardized field names

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -75,14 +75,16 @@ event.severity=db:event.severity;kind:integer;friendly:Severity;help:Severity
 event.severity_tags=db:event.severity_tags;kind:termfield;friendly:Severity Tags;help:Severity Tags
 event.risk_score=db:event.risk_score;kind:float;friendly:Risk Score;help:Risk Score
 event.risk_score_norm=db:event.risk_score_norm;kind:float;friendly:Risk Score (Normalized);help:Risk Score (Normalized)
+destination.hostname=db:destination.hostname;kind:termfield;friendly:Responding Host Name;help:Responding Host Name
+destination.segment=db:destination.segment;kind:termfield;friendly:Responding Network Segment;help:Responding Network Segment
+source.hostname=db:source.hostname;kind:termfield;friendly:Originating Host Name;help:Originating Host Name
+source.segment=db:source.segment;kind:termfield;friendly:Originating Network Segment;help:Originating Network Segment
 
 # basic connection information
 zeek.orig_h=db:zeek.orig_h;kind:termfield;friendly:Originating host;help:Originating Host
 zeek.orig_p=db:zeek.orig_p;kind:integer;friendly:Originating port;help:Originating Port
 zeek.orig_l2_addr=db:zeek.orig_l2_addr;kind:termfield;friendly:Originating MAC;help:Originating MAC
 zeek.orig_l2_oui=db:zeek.orig_l2_oui;kind:termfield;friendly:Originating OUI;help:Originating OUI
-zeek.orig_hostname=db:zeek.orig_hostname;kind:termfield;friendly:Originating Host Name;help:Originating Host Name
-zeek.orig_segment=db:zeek.orig_segment;kind:termfield;friendly:Originating Network Segment;help:Originating Network Segment
 zeek.source_ip_reverse_dns=db:zeek.source_ip_reverse_dns;kind:termfield;friendly:Originating IP Reverse DNS;help:Originating IP Reverse DNS
 zeek.source_geo.city_name=db:zeek.source_geo.city_name;kind:termfield;friendly:Originating GeoIP City;help:Originating GeoIP City
 zeek.source_geo.country_name=db:zeek.source_geo.country_name;kind:termfield;friendly:Originating GeoIP Country;help:Originating GeoIP Country
@@ -90,8 +92,6 @@ zeek.resp_h=db:zeek.resp_h;kind:termfield;friendly:Responding host;help:Respondi
 zeek.resp_p=db:zeek.resp_p;kind:integer;friendly:Responding port;help:Responding Port
 zeek.resp_l2_addr=db:zeek.resp_l2_addr;kind:termfield;friendly:Responding MAC;help:Responding MAC
 zeek.resp_l2_oui=db:zeek.resp_l2_oui;kind:termfield;friendly:Responding OUI;help:Responding OUI
-zeek.resp_hostname=db:zeek.resp_hostname;kind:termfield;friendly:Responding Host Name;help:Responding Host Name
-zeek.resp_segment=db:zeek.resp_segment;kind:termfield;friendly:Responding Network Segment;help:Responding Network Segment
 zeek.destination_ip_reverse_dns=db:zeek.destination_ip_reverse_dns;kind:termfield;friendly:Responding IP Reverse DNS;help:Responding IP Reverse DNS
 zeek.destination_geo.city_name=db:zeek.destination_geo.city_name;kind:termfield;friendly:Responding GeoIP City;help:Responding GeoIP City
 zeek.destination_geo.country_name=db:zeek.destination_geo.country_name;kind:termfield;friendly:Responding GeoIP Country;help:Responding GeoIP Country
