--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -110,7 +110,7 @@ filter {
             add_field => { "[zeek_bestguess][category]" => "%{[@metadata][ics_guess_oui_dst]}" }
           }
         }
-        if (![zeek][orig_l2_oui]) {
+        if (![zeek][resp_l2_oui]) {
           mutate {
             id => "mutate_add_fields_resp_l2_oui_from_ics_guess_oui_dst"
             add_field => { "[zeek][resp_l2_oui]" => "%{[@metadata][ics_guess_oui_dst]}" }
@@ -402,30 +402,6 @@ filter {
 
   } # end if radius
 
-  if ([zeek_cip_identity][socket_address]) {
-
-    # if this is a zeek_cip_identity record with socket_address, ASN/GeoIP it as well
-    geoip {
-      id => "geoip_zeek_cip_identity_socket_address"
-      default_database_type => "ASN"
-      source => "[zeek_cip_identity][socket_address]"
-      target => "[@metadata][zeek_cip_identity_asn]"
-    }
-    if ([@metadata][zeek_cip_identity_asn] and [@metadata][zeek_cip_identity_asn][as_org] and [@metadata][zeek_cip_identity_asn][asn]) {
-      # this is stupid, the %{} doesn't seem to be liked by mutate.merge
-      mutate { id => "mutate_add_field_zeek_cip_identity_asn"
-               add_field => { "[@metadata][cip_asn_str]" => "AS%{[@metadata][zeek_cip_identity_asn][asn]} %{[@metadata][zeek_cip_identity_asn][as_org]}" } }
-      mutate { id => "mutate_merge_zeek_cip_identity_asn"
-               merge => { "[zeek_cip_identity][socket_address_asn]" => "[@metadata][cip_asn_str]" } }
-    }
-    geoip {
-      id => "geoip_zeek_cip_identity_socket_address_geo"
-      source => "[zeek_cip_identity][socket_address]"
-      target => "[zeek_cip_identity][socket_address_geo]"
-    }
-
-  } # end if zeek_cip_identity.socket_address
-
   if ([zeek_ssl][server_name]) {
     mutate {
       add_field => { "[@metadata][ENV_FREQ_LOOKUP]" => "${FREQ_LOOKUP:false}" }
@@ -482,7 +458,7 @@ filter {
 
   if ([log][file][path]) {
     # trim path portion of log.file.path
-    mutate { id => "mutate_gsub_field_zeek_log_file_path"
+    mutate { id => "mutate_gsub_field_log_file_path"
              gsub => [ "[log][file][path]", "^.*/", "" ] }
   }
 
