--- a/logstash/pipelines/enrichment/18_tags_finalize.conf
+++ b/logstash/pipelines/enrichment/18_tags_finalize.conf
@@ -13,7 +13,7 @@ filter {
 
   # deduplicate and count tags
   ruby {
-    id => "ruby_zeek_tags_deduplicate"
+    id => "ruby_tags_deduplicate"
     path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
     script_params => {
       "field" => "tags"
