--- a/logstash/pipelines/enrichment/20_enriched_to_ecs.conf
+++ b/logstash/pipelines/enrichment/20_enriched_to_ecs.conf
@@ -34,11 +34,11 @@ filter {
                add_field => { "[network][direction]" => "%{[@metadata][network_direction]}" } }
     }
 
-    # network.name (based on info from [zeek][resp_segment] and [zeek][orig_segment])
-    if ([zeek][resp_segment]) { mutate { id => "mutate_add_field_ecs_network_name_resp"
-                                         merge => { "[network][name]" => "[zeek][resp_segment]" } } }
-    if ([zeek][orig_segment]) { mutate { id => "mutate_add_field_ecs_network_name_orig"
-                                         merge => { "[network][name]" => "[zeek][orig_segment]" } } }
+    # network.name (based on info from [destination][segment] and [source][segment])
+    if ([destination][segment]) { mutate { id => "mutate_add_field_ecs_network_name_resp"
+                                           merge => { "[network][name]" => "[destination][segment]" } } }
+    if ([source][segment]) { mutate { id => "mutate_add_field_ecs_network_name_orig"
+                                      merge => { "[network][name]" => "[source][segment]" } } }
 
     # Autonomous System and Geo are handled after enrichment in 20_enriched_to_ecs.conf
     # ☐ Autonomous System - Fields describing an Autonomous System (Internet routing prefix). - https://www.elastic.co/guide/en/ecs/current/ecs-as.html
@@ -51,7 +51,7 @@ filter {
     # event.ingested
     if (![event][ingested]) {
       ruby {
-        id => "ruby_event_ingested_now_zeek"
+        id => "ruby_event_ingested_now"
         init => "require 'time'"
         code => "event.set('[event][ingested]', Time.now.to_f)"
       }
