--- a/logstash/pipelines/zeek/20_zeek_to_ecs.conf
+++ b/logstash/pipelines/zeek/20_zeek_to_ecs.conf
@@ -61,8 +61,8 @@ filter {
     # as Arkime uses source/destination for network stuff (vs. client/server) we're doing that as well for zeek logs
 
     # client.domain
-          if ([zeek][orig_hostname]) {            mutate { id => "mutate_add_field_ecs_client_domain_orig_hostname"
-                                                           add_field => { "[client][domain]" => "%{[zeek][orig_hostname]}" } } }
+          if ([source][hostname]) {            mutate { id => "mutate_add_field_ecs_client_domain_source_hostname"
+                                                           add_field => { "[client][domain]" => "%{[source][hostname]}" } } }
     else if ([zeek_dhcp][host_name]) {            mutate { id => "mutate_add_field_ecs_client_domain_dhcp_host_name"
                                                            add_field => { "[client][domain]" => "%{[zeek_dhcp][host_name]}" } } }
     else if ([zeek_dhcp][domain]) {               mutate { id => "mutate_add_field_ecs_client_domain_dhcp_domain"
@@ -76,8 +76,8 @@ filter {
     # as Arkime uses source/destination for network stuff (vs. client/server) we're doing that as well for zeek logs
 
     # server.domain
-          if ([zeek][resp_hostname]) {            mutate { id => "mutate_add_field_ecs_server_domain_resp_hostname"
-                                                           add_field => { "[server][domain]" => "%{[zeek][resp_hostname]}" } } }
+          if ([destination][hostname]) {            mutate { id => "mutate_add_field_ecs_server_domain_destination_hostname"
+                                                           add_field => { "[server][domain]" => "%{[destination][hostname]}" } } }
 
     # ☐ Event - Fields breaking down the event details. - https://www.elastic.co/guide/en/ecs/current/ecs-event.html
 
