--- a/logstash/pipelines/enrichment/17_segment_comparison.conf
+++ b/logstash/pipelines/enrichment/17_segment_comparison.conf
@@ -1,7 +1,7 @@
 filter {
 
-  if ([zeek][resp_segment] and [zeek][orig_segment]) and
-     ([zeek][resp_segment] != [zeek][orig_segment]) {
+  if ([destination][segment] and [source][segment]) and
+     ([destination][segment] != [source][segment]) {
     mutate {
       id => "mutate_add_tag_cross_segment"
       add_tag => [ "cross_segment" ]
