--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -4103,6 +4103,34 @@ filter {
       }
     }
 
+  } else if ([log_source] == "cip_identity") {
+    #############################################################################################################################
+    # cip_identity.log specific logic
+
+    if ([zeek_cip_identity][socket_address]) {
+
+      # if this is a zeek_cip_identity record with socket_address, ASN/GeoIP it as well
+      geoip {
+        id => "geoip_zeek_cip_identity_socket_address"
+        default_database_type => "ASN"
+        source => "[zeek_cip_identity][socket_address]"
+        target => "[@metadata][zeek_cip_identity_asn]"
+      }
+      if ([@metadata][zeek_cip_identity_asn] and [@metadata][zeek_cip_identity_asn][as_org] and [@metadata][zeek_cip_identity_asn][asn]) {
+        # this is stupid, the %{} doesn't seem to be liked by mutate.merge
+        mutate { id => "mutate_add_field_zeek_cip_identity_asn"
+                 add_field => { "[@metadata][cip_asn_str]" => "AS%{[@metadata][zeek_cip_identity_asn][asn]} %{[@metadata][zeek_cip_identity_asn][as_org]}" } }
+        mutate { id => "mutate_merge_zeek_cip_identity_asn"
+                 merge => { "[zeek_cip_identity][socket_address_asn]" => "[@metadata][cip_asn_str]" } }
+      }
+      geoip {
+        id => "geoip_zeek_cip_identity_socket_address_geo"
+        source => "[zeek_cip_identity][socket_address]"
+        target => "[zeek_cip_identity][socket_address_geo]"
+      }
+
+    }
+
   } else if ([log_source] == "dhcp") {
     #############################################################################################################################
     # dhcp.log specific logic
